--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-parment8001</module>
+    <module>cloud-comsumer-order80</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -19,7 +20,7 @@
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <lombok.version>1.16.18</lombok.version>
-    <mysql.version>5.1.47</mysql.version>
+    <mysql.version>8.0.11</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
   </properties>
