--- a/cloud-comsumer-order80/pom.xml
+++ b/cloud-comsumer-order80/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>cloud-comsumer-order80</artifactId>
     <dependencies>
 
+        <!--eureka-server-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency><!-- 引入自己定义的api通用包，可以使用Payment支付Entity -->
             <groupId>com.gqb</groupId>
             <artifactId>cloud-api-commons</artifactId>
