--- a/cloud-provider-parment8001/pom.xml
+++ b/cloud-provider-parment8001/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>cloud-provider-parment8001</artifactId>
     <dependencies>
+
+        <!--eureka-server-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency><!-- 引入自己定义的api通用包，可以使用Payment支付Entity -->
             <groupId>com.gqb</groupId>
             <artifactId>cloud-api-commons</artifactId>
